Fix distortion oversample slider by using numbers

--- a/src/components/Select/index.scss
+++ b/src/components/Select/index.scss
@@ -32,6 +32,7 @@
     font-size: 14px;
     border-radius: 0 0 $border-radius-large $border-radius-large;
     box-shadow: 0px 1px 0px rgba(0,0,0,0.1) !important;
+    z-index: 100;
 
     .Select-option {
       color: $mediumgray;
